format registration mail

--- a/src/app/views/emails/partials/gymnasts.hbs
+++ b/src/app/views/emails/partials/gymnasts.hbs
@@ -1,9 +1,9 @@
 <div style="
   background: #FFF;
-  width: 100%;
+  display: block;
   border-radius: 10px;
-  padding: 10px;
+  padding: 20px;
   margin: 20px 0;">
   <img src="https://github.com/rodrigocichetto/bootcamp-gostack-desafio-03/blob/master/.github/g570.png?raw=true"
-    alt="Gymnasts" />
+    alt="Gymnasts" style="height: 250px;" />
 </div>
