--- a/src/app/views/emails/registration.hbs
+++ b/src/app/views/emails/registration.hbs
@@ -1,6 +1,6 @@
 <strong>Olá, <span style="color: #EE4D64">{{ student.name }}</span></strong>
 <p>
-  Você realizou a sua matricula na Gympoint com sucesso no plano <strong style="color: #EE4D64">{{ plan.name }}</strong> ;D
+  Você realizou a sua matricula na Gympoint com sucesso no plano <strong style="color: #EE4D64">{{ plan.title }}</strong> ;D
 </p>
 <p>
   <strong>Data de início informada:</strong> {{ start_date }} <br>
